Bug 1000947 - Console::Methods must not throw exceptions. r=bz, a=lsblakk